# fakesudo

./: README.md  config.hpp.in  meson.build  meson_options.txt
include/libfakesudo/: get_next_symbol.hpp  parameters.hpp
src/fakesudo/: sudo.sh
src/libfakesudo/: chown.cpp  environment.cpp  exec.cpp  parameters.cpp  user.cpp
